tests/lit/yalang/syntax/errors/ifelseelse.ya
// RUN: @compiler --emit yair @file
 
func : function() : void {
  if true {

  } else {
  
  // CHECK: error: Else statement without an if
  } else {

  }
}
